force-app/main/default/objects/Deposit_Refund__c/Deposit_Refund__c.object-meta.xml
<CustomObject>
    <label>Deposit/Refund</label>
    <nameField>
        <label>Deposit/Refund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deposit/Refunds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>