force-app/main/default/objects/Deposit_Refund__c/fields/Deposit_Code__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Code__c</fullName>
    <label>Deposit Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>