force-app/main/default/objects/Deposit_Refund__c/fields/Deposit_Int_THRU__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Int_THRU__c</fullName>
    <label>Deposit Interest THRU</label>
    <length>20</length>
    <type>Text</type>
</CustomField>