force-app/main/default/objects/Deposit_Refund__c/fields/Deposit_Intreset__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Intreset__c</fullName>
    <label>Deposit Intrest</label>
    <length>20</length>
    <type>Text</type>
</CustomField>