force-app/main/default/objects/Deposit_Refund__c/fields/Deposit_Method__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Method__c</fullName>
    <label>Deposit Method</label>
    <length>25</length>
    <type>Text</type>
</CustomField>