force-app/main/default/objects/Deposit_Refund__c/fields/Dpsit_Description__c.field-meta.xml
<CustomField>
    <fullName>Dpsit_Description__c</fullName>
    <label>Deposit Description</label>
    <length>25</length>
    <type>Text</type>
</CustomField>