force-app/main/default/objects/Deposit_Refund__c/fields/Int_amt_to_Post__c.field-meta.xml
<CustomField>
    <fullName>Int_amt_to_Post__c</fullName>
    <label>Interest amount to Post</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>