force-app/main/default/objects/Deposit_Refund__c/fields/Int_Refnd_Acct__c.field-meta.xml
<CustomField>
    <fullName>Int_Refnd_Acct__c</fullName>
    <label>Deposit And Interest Refund Account</label>
    <length>25</length>
    <type>Text</type>
</CustomField>