force-app/main/default/objects/Deposit_Refund__c/fields/Int_Refnd_Amt__c.field-meta.xml
<CustomField>
    <fullName>Int_Refnd_Amt__c</fullName>
    <label>Deposit and Interest Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>