force-app/main/default/objects/Deposit_Refund__c/fields/Int_Refnd_Chk_No__c.field-meta.xml
<CustomField>
    <fullName>Int_Refnd_Chk_No__c</fullName>
    <label>Deposit And Interest Refund Check Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>