force-app/main/default/objects/Deposit_Refund__c/fields/Int_Refnd_Code__c.field-meta.xml
<CustomField>
    <fullName>Int_Refnd_Code__c</fullName>
    <label>Deposit And Interest Refund Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>