force-app/main/default/objects/Deposit_Refund__c/fields/Int_Refnd_Lst_Date__c.field-meta.xml
<CustomField>
    <fullName>Int_Refnd_Lst_Date__c</fullName>
    <label>Deposit And Interest Refund Last Date</label>
    <type>Date</type>
</CustomField>