force-app/main/default/objects/Deposit_Refund__c/fields/Int_ToDate__c.field-meta.xml
<CustomField>
    <fullName>Int_ToDate__c</fullName>
    <label>Deposit And Interest ToDate</label>
    <type>Date</type>
</CustomField>