force-app/main/default/objects/Deposit_Refund__c/fields/method_Dscriptn__c.field-meta.xml
<CustomField>
    <fullName>method_Dscriptn__c</fullName>
    <label>Deposit method and Description</label>
    <length>20</length>
    <type>Text</type>
</CustomField>