force-app/main/default/objects/Deposit_Refund__c/fields/Ref_Amt_To_Post__c.field-meta.xml
<CustomField>
    <fullName>Ref_Amt_To_Post__c</fullName>
    <label>Deposit Ref Amount To Post</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>