force-app/main/default/objects/Deposit_Refund__c/fields/Refnd_Acct__c.field-meta.xml
<CustomField>
    <fullName>Refnd_Acct__c</fullName>
    <label>Deposit Refund Account</label>
    <length>25</length>
    <type>Text</type>
</CustomField>