force-app/main/default/objects/Deposit_Refund__c/fields/Refnd_chck_no__c.field-meta.xml
<CustomField>
    <fullName>Refnd_chck_no__c</fullName>
    <label>Deposit Refund check number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>