force-app/main/default/objects/Deposit_Refund__c/fields/Refnd_ToDate__c.field-meta.xml
<CustomField>
    <fullName>Refnd_ToDate__c</fullName>
    <label>Deposit Refund ToDate</label>
    <type>Date</type>
</CustomField>