force-app/main/default/objects/Deposit_Refund__c/fields/Refund_Code__c.field-meta.xml
<CustomField>
    <fullName>Refund_Code__c</fullName>
    <label>Deposit Refund Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>