force-app/main/default/objects/Deposit_Refund__c/fields/Seq_Number__c.field-meta.xml
<CustomField>
    <fullName>Seq_Number__c</fullName>
    <label>Sequence Number</label>
    <length>1</length>
    <type>Text</type>
</CustomField>