force-app/main/default/objects/Deposit_Refund__c/fields/THRU__c.field-meta.xml
<CustomField>
    <fullName>THRU__c</fullName>
    <label>THRU</label>
    <type>Date</type>
</CustomField>